--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.2.3",
     "@angular/platform-browser-dynamic": "~13.2.3",
     "@angular/router": "~13.2.3",
+    "aos": "^2.3.4",
     "mdb-angular-ui-kit": "^1.6.1",
     "mdbootstrap": "^4.20.0",
     "rxjs": "~7.4.0",
@@ -30,6 +31,7 @@
     "@angular-devkit/build-angular": "~13.2.4",
     "@angular/cli": "~13.2.4",
     "@angular/compiler-cli": "~13.2.3",
+    "@types/aos": "^3.0.4",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.13",
     "@types/node": "^12.11.1",
